test/TestPhases/parser/valid/hangingActivity.blc
module hangingActivity

activity empty ()()
    await false;
end
