test/TestPhases/parser/invalid/importNotBlechId.blc

import mymod "0_17Y"

module

activity main()
end

